Remove usage of deprecated new Integer and avoid wrapper creation
Change-Id: Ia975c34d7e0fd0a9e9ec2feee93b8dec690ef9a6
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>